--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li class="divider"></li>
             <li><a onclick="setLocalArId('EMA2')" href="#">EMA2</a></li>
             <li><a onclick="setLocalArId('LTN4')" href="#">LTN4</a></li>
+            <li><a onclick="setLocalArId('MAN1')" href="#">LTN4</a></li> 
         </ul>
         <nav class="black-text">
             <div class="nav-wrapper white">
